--- a/index.html
+++ b/index.html
@@ -8,10 +8,17 @@
 </head>
 <body>
     
-    <div id="concord">
-        <img id="logo" src="img/logo.png" alt="asdas">
-        <h1>CON<span>CORD</span> <span id="pequeno">Chat online</span></h1>
-    </div>
+    <header>
+        <div class="titulo">
+            <div class="dImg">
+                <img src="img/logo.png" alt="logo">
+            </div>
+            <div class="dConcord">
+                <h1>Con<span>cord</span></h1>
+                <p id="chat">Chat online</p>
+            </div>
+        </div>
+    </header>
 
     <main>
 
