--- a/contato/contato.html
+++ b/contato/contato.html
@@ -24,8 +24,39 @@
                 </div>
             </header>
 
+            <div id="voltar">
+                <a href="link"><img id="vol" src="img/voltar.png" alt="voltar"></a>
+            </div>
+
+
+            <div id="perfil">
+                <p id="pp">Loren</p>
+                <img id="per" src="img/perfil.png" alt="perfil">
+            </div>
+
+            <div id="descricao">
+
+                <textarea name="Mensagem" id="Mensagem" placeholder="digite uma descrição"></textarea>
+
+            </div>
+
+            <footer id="butao">
+                <a class="link" href="favorito"><img class="favorito" src="img/favorito.png" alt="favorito"></a>
+                <a class="link" href="block"><img class="bloqueados" src="img/block.png" alt="block"></a>
+                <a class="link" href="denuncia"><img class="denuncia" src="img/denuncia.png" alt="denuncia"></a>
+            </footer>
+
         </section>
 
     </div>
 </body>
 </html>
+
+<!--
+    <p>
+        Corem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu turpis 
+        molestie, dictum est a, mattis tellus. Sed dignissim, metus nec fringilla
+        accumsan, risus sem sollicitudin lacus, ut interdum tellus elit sed risus.
+        Maecenas eget condimentum velit, sit. 
+    </p>
+ -->
