--- a/contato/contato.html
+++ b/contato/contato.html
@@ -25,7 +25,7 @@
             </header>
 
             <div id="voltar">
-                <a href="link"><img id="vol" src="img/voltar.png" alt="voltar"></a>
+                <a href="link"><img class="vol" src="img/voltar.png" alt="voltar"></a>
             </div>
 
 
@@ -41,9 +41,12 @@
             </div>
 
             <footer id="butao">
-                <a class="link" href="favorito"><img class="favorito" src="img/favorito.png" alt="favorito"></a>
-                <a class="link" href="block"><img class="bloqueados" src="img/block.png" alt="block"></a>
-                <a class="link" href="denuncia"><img class="denuncia" src="img/denuncia.png" alt="denuncia"></a>
+
+                <a class="favorito" href="favorito"><img class="imagem" src="img/favorito2.png" alt="favorito"></a>
+
+                <a class="bloqueados" href="block"><img class="imagem" src="img/block.png" alt="block"></a>
+                
+                <a class="denuncia" href="denuncia"><img class="imagem" src="img/denuncia.png" alt="denuncia"></a>
             </footer>
 
         </section>
