--- a/pesquisa/pesquisa.html
+++ b/pesquisa/pesquisa.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pesquisa</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/icone_pesquisa.png" type="image/x-icon">
 </head>
 <body>
     <div id="alinhar">
@@ -21,7 +21,26 @@
                         <p id="chat">𝒞𝒽𝒶𝓉 𝑜𝓃𝓁𝒾𝓃𝑒</p>
                     </div>
                 </div>
+
+                <div id="pes_ini">
+                    <img id="luneta" src="img/icone_pesquisa.png" alt="pesquisa">
+                    <form method="post">
+                        <input type="text" id="name" name="name" autocomplete="off" placeholder="Pesquisar usuário" required>
+                    </form>
+                </div>
             </header>
+
+            <div id="filtros">
+                <div id="pes_fil">
+                    <img id="img_fil" src="img/pesquisa.png" alt="pesquisa">
+                    <input type="text" id="fil" name="fil" autocomplete="off"  required>
+                </div>
+                
+            </div>
+            
+            <div id="">
+
+            </div>
 
         </section>
     </div>
