--- a/pesquisa/pesquisa.html
+++ b/pesquisa/pesquisa.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pesquisa</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="shortcut icon" href="img/icone_pesquisa.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
 </head>
 <body>
     <div id="alinhar">
@@ -41,23 +41,23 @@
 
                         <div class="opcao">
                             <input type="radio" class="opçao" name="escolha" value="opcao1">
-                            <label for="opcao1">filtro</label>
+                            <label for="opcao1">filtro 1</label>
                         </div>
                         <div class="opcao">
                             <input type="radio" class="opçao" name="escolha" value="opcao2" >
-                            <label for="opcao2">filtro</label>
+                            <label for="opcao2">filtro 2</label>
                         </div>
                         <div class="opcao">
                             <input type="radio" class="opçao" name="escolha" value="opcao3">
-                            <label for="opcao3">filtro</label>
+                            <label for="opcao3">filtro 3</label>
                         </div>
                         <div class="opcao">
                             <input type="radio" class="opçao" name="escolha" value="opcao3">
-                            <label for="opcao3">filtro</label>
+                            <label for="opcao3">filtro 4</label>
                         </div>
                         <div class="opcao">
                             <input type="radio" class="opçao" name="escolha" value="opcao3">
-                            <label for="opcao3">filtro</label>
+                            <label for="opcao3">filtro 5</label>
                         </div>
 
                 </div>
@@ -68,23 +68,23 @@
             <div class="contato">
                 <div class="contatos">
                     <img class="boneco" src="img/boneco.png" alt="boneco">
-                    <p class="usuario">Usuário 1</p>
+                    <p class="usuario">ㅤUsuário 1</p>
                 </div>
                 <div class="contatos">
                     <img class="boneco" src="img/boneco.png" alt="boneco">
-                    <p class="usuario">Usuário 1</p>
+                    <p class="usuario">ㅤUsuário 2</p>
                 </div>
                 <div class="contatos">
                     <img class="boneco" src="img/boneco.png" alt="boneco">
-                    <p class="usuario">Usuário 1</p>
+                    <p class="usuario">ㅤUsuário 3</p>
                 </div>
                 <div class="contatos">
                     <img class="boneco" src="img/boneco.png" alt="boneco">
-                    <p class="usuario">Usuário 1</p>
+                    <p class="usuario">ㅤUsuário 4</p>
                 </div>
                 <div class="contatos">
                     <img class="boneco" src="img/boneco.png" alt="boneco">
-                    <p class="usuario">Usuário 1</p>
+                    <p class="usuario">ㅤUsuário 5</p>
                 </div>
 
             </div>
